followed homework instructions

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="./index.css" />
     <title>Furniture Emporium</title>
   </head>
   <body>
@@ -13,38 +14,44 @@
         </p>
       </header>
       <article>
-        <h2>Ergonomic Couch</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis
-          delectus iusto corporis id, quo cumque, perferendis consequatur
-          possimus repellendus quisquam minus sapiente aut suscipit fugit quia
-          debitis totam et incidunt!
-        </p>
-        <p>$20.00 <s>$25.00</s></p>
-        <button>Add to cart</button>
+        <div class="card-style">
+          <h2>Ergonomic Couch</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis
+            delectus iusto corporis id, quo cumque, perferendis consequatur
+            possimus repellendus quisquam minus sapiente aut suscipit fugit quia
+            debitis totam et incidunt!
+          </p>
+          <p><div class=sale-price>$20.00</div> <s>$25.00</s></p>
+          <button>Add to cart</button>
+        </div>
       </article>
-      <article>
-        <h2>Frozen Table</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis
-          delectus iusto corporis id, quo cumque, perferendis consequatur
-          possimus repellendus quisquam minus sapiente aut suscipit fugit quia
-          debitis totam et incidunt!
-        </p>
-        <p>$49.95 <s>$60.00</s></p>
-        <button>Add to cart</button>
-      </article>
-      <article>
-        <h2>Handcrafted Chair</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis
-          delectus iusto corporis id, quo cumque, perferendis consequatur
-          possimus repellendus quisquam minus sapiente aut suscipit fugit quia
-          debitis totam et incidunt!
-        </p>
-        <p>$18.99 <s>$32.99</s></p>
-        <button>Add to cart</button>
-      </article>
+      <div class="card-style">
+        <article>
+          <h2>Frozen Table</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis
+            delectus iusto corporis id, quo cumque, perferendis consequatur
+            possimus repellendus quisquam minus sapiente aut suscipit fugit quia
+            debitis totam et incidunt!
+          </p>
+          <p><div class=sale-price>$49.95 </div><s>$60.00</s></p>
+          <button>Add to cart</button>
+        </article>
+      </div>
+      <div class="card-style">
+        <article>
+          <h2>Handcrafted Chair</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis
+            delectus iusto corporis id, quo cumque, perferendis consequatur
+            possimus repellendus quisquam minus sapiente aut suscipit fugit quia
+            debitis totam et incidunt!
+          </p>
+          <p><div class=sale-price>$18.99</div> <s>$32.99</s></p>
+          <button>Add to cart</button>
+        </article>
+      </div>
     </main>
   </body>
 </html>
